--- a/src/components/chord-chart-container/chord-chart-container.styles.scss
+++ b/src/components/chord-chart-container/chord-chart-container.styles.scss
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	align-items: stretch;
-	justify-content: flex-start;
+	// align-items: center;
+	// align-content: center;
+	justify-content: center;
 	background-color: #16181d;
 }
