--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -4,12 +4,14 @@
 	// align-items: center;
 	flex-wrap: wrap;
 	align-items: flex-start;
-	width: 20em;
+	width: 40em;
+	max-width: 90vw;
+	border: 1px solid white;
 }
 
 .chord-chart-single {
-	padding: 20px;
-	margin: auto;
+	padding: 40px;
+	// margin-right: auto;
 }
 
 // .chord-chart-single:last-child {
@@ -20,4 +22,17 @@
 .chord-chart-heading {
 	display: block;
 	padding-bottom: 10px;
+}
+
+@media only screen and (max-width: 680px) {
+	.chord-chart {
+		width: 40em;
+		min-width: 98vw;
+		max-width: 98vw;
+	}
+
+	.chord-chart-single {
+		max-width: 100vw;
+		padding: 20px;
+	}
 }
