--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -21,7 +21,8 @@
 
 .chord-chart-heading {
 	display: block;
-	padding-bottom: 10px;
+	padding-bottom: 1rem;
+	font-size: 1.5rem;
 }
 
 @media only screen and (max-width: 680px) {
