Implement super script with dangerouslySetInnerHTML for diminished chords etc

--- a/src/components/chord-box/chord-box.styles.scss
+++ b/src/components/chord-box/chord-box.styles.scss
@@ -146,7 +146,8 @@ p {
 
 		@media only screen and (max-width: 680px) {
 			&:after {
-				width: 27vw;
+				width: 29vw;
+				transform: rotate(133deg);
 			}
 		}
 	}
