--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@
 	align-content: center;
 	/* padding: 50px; */
 	background-color: #16181d;
+	max-width: 100vw;
 }
 
 @media only screen and (max-width: 680px) {
