--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -28,12 +28,13 @@
 @media only screen and (max-width: 680px) {
 	.chord-chart {
 		width: 40em;
-		min-width: 98vw;
-		max-width: 98vw;
+		// min-width: 98vw;
+		// max-width: 98vw;
+		max-width: 100%;
 	}
 
 	.chord-chart-single {
-		max-width: 100vw;
-		padding: 20px;
+		max-width: 96vw;
+		padding: 10vw 2vw;
 	}
 }
