--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -21,7 +21,8 @@
 
 .chord-chart-heading {
 	display: block;
-	padding-bottom: 1rem;
+	padding-top: 1rem;
+	padding-bottom: 2rem;
 	font-size: 1.5rem;
 }
 
