--- a/src/components/chord-box/chord-box.styles.scss
+++ b/src/components/chord-box/chord-box.styles.scss
@@ -5,6 +5,7 @@ p {
 .chord-box-split p {
 	font-size: 1rem;
 }
+
 @media only screen and (max-width: 680px) {
 	p {
 		font-size: 0.9rem;
@@ -128,6 +129,14 @@ p {
 		position: absolute;
 	}
 
+	.chordbox-quarter {
+		text-align: right;
+		padding-top: 100%;
+		padding-left: 65%;
+		position: absolute;
+		font-size: .5rem;
+	}
+
 	.half-line {
 		// border-top: 1px solid white;
 		width: 12.5%;
@@ -148,6 +157,56 @@ p {
 			&:after {
 				width: 29vw;
 				transform: rotate(135deg);
+			}
+		}
+	}
+
+	.short-line-top {
+		// border-top: 1px solid white;
+		// display: none;
+		width: 12.5%;
+		height: 12.5%;
+		position: absolute;
+		z-index: 1;
+
+		&:after {
+			content: "";
+			position: absolute;
+			border-top: 2px solid white;
+			width: 112px;
+			transform: rotate(135deg);
+			transform-origin: 41.5% 10%;
+		}
+
+		@media only screen and (max-width: 680px) {
+			&:after {
+				width: 17vw;
+				transform-origin: 42.2% 30%;
+			}
+		}
+	}
+
+	.short-line-bottom {
+		// border-top: 1px solid white;
+
+		width: 12.5%;
+		height: 12.5%;
+		position: absolute;
+		z-index: 1;
+
+		&:after {
+			content: "";
+			position: absolute;
+			border-top: 2px solid white;
+			width: 112.5px;
+			transform: rotate(225deg);
+			transform-origin: 59% 2330%;
+		}
+
+		@media only screen and (max-width: 680px) {
+			&:after {
+				width: 40vw;
+				transform-origin: 54% 2220%;
 			}
 		}
 	}
