--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -1,14 +1,19 @@
 .chord-diagram-container {
 	padding: 4vw;
-	padding-bottom: 7vw;
-	width: 17vw;
-	height: 20.75vw;
+	padding-bottom: 17vw;
+	// width: 17vw;
+	width: fit-content;
+	// height: 20.75vw;
+	height: auto;
+	// margin: 2vw;
 
 	.chord-name {
 		text-align: center;
 		margin-left: -10%;
-		font-size: 2rem;
-		padding-bottom: 1rem;
+		font-size: 3vw;
+		padding-bottom: 1vw;
+		max-width: 17vw;
+		margin: auto;
 
 		// width: inherit;
 		// margin-left: -2%;
@@ -19,6 +24,8 @@
 		flex-direction: row;
 		width: 15vw;
 		justify-content: space-between;
+		padding-bottom: 0.5vw;
+		font-size: 2vw;
 
 		#e6xo {
 			margin-left: -2%;
@@ -115,6 +122,24 @@
 			.e1 {
 				margin-left: 1.3%;
 			}
+		}
+	}
+}
+
+@media only screen and (max-width: 680px) {
+	.chord-diagram-container {
+		.chord-name {
+			margin: auto;
+			font-size: 5vw;
+		}
+		width: fit-content;
+		.chord-diagram-box {
+			width: calc(15vw * 1.8);
+			height: calc(18.75vw * 1.8);
+		}
+
+		.string-x-o-container {
+			width: auto;
 		}
 	}
 }
