--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -1,11 +1,22 @@
 .chord-diagram-container {
 	padding: 4vw;
+	padding-left: 5vw;
 	// padding-bottom: 17vw;
 	// width: 17vw;
 	width: fit-content;
 	// height: 20.75vw;
 	height: auto;
 	// margin: 2vw;
+	.fret-title {
+		position: absolute;
+		margin-top: 7%;
+		margin-left: -4%;
+	}
+	.first-fret-number {
+		position: absolute;
+		margin-top: 9%;
+		margin-left: -3%;
+	}
 
 	.chord-name {
 		text-align: center;
