--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -1,21 +1,27 @@
 .chord-diagram-container {
-	padding: 4vw;
-	padding-left: 5vw;
-	// padding-bottom: 17vw;
-	// width: 17vw;
+	margin: 3vw;
+	padding: 5vw;
+	padding-top: 2vw;
+	padding-bottom: 3vw;
+	padding-left: 4vw;
+	padding-right: 4vw;
 	width: fit-content;
-	// height: 20.75vw;
 	height: auto;
-	// margin: 2vw;
-	.fret-title {
-		position: absolute;
-		margin-top: 7%;
-		margin-left: -4%;
-	}
+	border: 2px solid rgba(255, 255, 255, 0.5);
+	border-radius: 2%;
+
+	.fret-title,
 	.first-fret-number {
 		position: absolute;
+		font-size: 1.3vw;
+	}
+	.fret-title {
+		margin-top: 7.5%;
+		margin-left: -3.4%;
+	}
+	.first-fret-number {
 		margin-top: 9%;
-		margin-left: -3%;
+		margin-left: -2.6%;
 	}
 
 	.chord-name {
@@ -139,11 +145,31 @@
 
 @media only screen and (max-width: 1080px) {
 	.chord-diagram-container {
+		width: fit-content;
+		padding: 6vw;
+		padding-top: 4vw;
+		padding-bottom: 4.5vw;
+		padding-left: 6vw;
+		padding-right: 6vw;
+
+		.fret-title,
+		.first-fret-number {
+			font-size: 2vw;
+			margin-left: -5%;
+		}
+		.fret-title {
+			margin-top: 9.5%;
+		}
+		.first-fret-number {
+			margin-top: 12%;
+			margin-left: -4%;
+		}
+
 		.chord-name {
 			margin: auto;
 			font-size: 5vw;
 		}
-		width: fit-content;
+
 		.chord-diagram-box {
 			width: calc(15vw * 1.8);
 			height: calc(18.75vw * 1.8);
