--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -19,6 +19,12 @@
 // 	margin-left: 1em;
 // }
 
+.chord-diagram-container-chart {
+	// width: 100%;
+	// height: 40vh;
+	// overflow: scroll;
+}
+
 .chord-chart-heading {
 	display: block;
 	padding-top: 1rem;
