Make chord diagram position absolute

--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -1,14 +1,15 @@
 .chord-diagram-container {
-	margin: 3vw;
+	// margin: 3vw;
 	padding: 5vw;
 	padding-top: 2vw;
 	padding-bottom: 3vw;
-	padding-left: 4vw;
-	padding-right: 4vw;
+	// padding-left: 4vw;
+	// padding-right: 4vw;
 	width: fit-content;
 	height: auto;
-	border: 2px solid rgba(255, 255, 255, 0.5);
+	// border: 2px solid rgba(255, 255, 255, 0.5);
 	border-radius: 2%;
+	// background-color: ;
 
 	.fret-title,
 	.first-fret-number {
