--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -20,9 +20,12 @@
 // }
 
 .chord-diagram-container-chart {
-	// width: 100%;
-	// height: 40vh;
-	// overflow: scroll;
+	background-color: #16181d;
+	width: fit-content;
+	position: absolute;
+
+	z-index: 9999999;
+	// position: absolute;
 }
 
 .chord-chart-heading {
