Fix padding on fret title and number on chord diagrams

--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -13,6 +13,11 @@
 	padding: 40px;
 	// margin-right: auto;
 }
+@media only screen and (max-width: 680px) {
+	.chord-chart-single {
+		max-height: 100vh;
+	}
+}
 
 // .chord-chart-single:last-child {
 // 	// background-color: goldenrod;
