--- a/src/components/chord-box/chord-box.styles.scss
+++ b/src/components/chord-box/chord-box.styles.scss
@@ -91,6 +91,11 @@ p {
 	.long-note {
 		font-size: 1em;
 	}
+	@media only screen and (max-width: 680px) {
+		.long-note {
+			font-size: .8em;
+		}
+	}
 }
 
 .chord-box-split {
@@ -112,6 +117,12 @@ p {
 
 	.long-note {
 		font-size: 0.65rem;
+	}
+
+	@media only screen and (max-width: 680px) {
+		.long-note {
+			font-size: 0.35rem;
+		}
 	}
 
 	p {
@@ -244,6 +255,9 @@ p {
 		font-size: calc(3px + 2vmin);
 		.half-left {
 			padding-right: 10%;
+		}
+		.quarter-triangle {
+			transform-origin: 25% 145%;
 		}
 	}
 }
