--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -156,11 +156,11 @@
 @media only screen and (max-width: 1080px) {
 	.chord-diagram-container {
 		width: fit-content;
-		padding: 6vw;
-		padding-top: 4vw;
-		padding-bottom: 4.5vw;
-		padding-left: 6vw;
-		padding-right: 6vw;
+		// padding: 6vw;
+		padding-top: 9vw;
+		padding-bottom: 9vw;
+		padding-left: 10vw;
+		padding-right: 11vw;
 
 		.fret-title,
 		.first-fret-number {
