--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -11,7 +11,7 @@
 .invisible-div-diagram {
 	min-width: 100vw;
 	min-height: 100vh;
-	background-color: #16181d80;
+	background-color: #16181dA6;
 	position: fixed;
 	bottom: 0;
 	right: 0;
@@ -21,12 +21,6 @@
 	align-items: center;
 	// margin-top: -10vw;
 	// margin-left: -22vw;
-}
-
-@media only screen and (max-width: 680px) {
-	.invisible-div-diagram {
-		// margin-left: -2vw;
-	}
 }
 
 .chord-chart {
@@ -58,9 +52,12 @@
 .chord-diagram-container-chart {
 	background-color: #16181d;
 	width: fit-content;
-	position: absolute;
-	margin-top: -4px;
-	margin-left: -2px;
+	position: fixed;
+	left: 50%;
+	top: 25%;
+	transform: translate(-50%, 0);
+	// margin-top: -4px;
+	// margin-left: -2px;
 	z-index: 9999999;
 	border-left: 2px solid #16181d;
 }
