Fix opacity on chord diagram frets

--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -95,7 +95,7 @@
 			.fret {
 				border-top: 2px solid white;
 				width: inherit;
-				opacity: 60%;
+				// opacity: 60%;
 				// padding-bottom: 20px;
 			}
 		}
