--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -7,9 +7,10 @@
 	// padding-right: 4vw;
 	width: fit-content;
 	height: auto;
-	// border: 2px solid rgba(255, 255, 255, 0.5);
-	border-radius: 2%;
+	border: 2px solid #888888b9;
+	// border-radius: 2%;
 	// background-color: ;
+	box-shadow: 1px 1px 30px 3px #888888;
 
 	.fret-title,
 	.first-fret-number {
