--- a/src/components/chord-box/chord-box.styles.scss
+++ b/src/components/chord-box/chord-box.styles.scss
@@ -4,6 +4,21 @@ p {
 
 .chord-box-split p {
 	font-size: 1rem;
+	&:hover {
+		transform: translateY(-3px);
+		transition-duration: 0.3s;
+		transition-timing-function: ease-out;
+	}
+
+	span {
+		&:hover {
+			// color: #d8ae00;
+			transition-duration: 0.5s;
+			transform: scale(2);
+			text-shadow: 0px 4px 8px #88888888;
+			transition-timing-function: ease-in-out;
+		}
+	}
 }
 
 @media only screen and (max-width: 680px) {
@@ -86,6 +101,22 @@ p {
 	.chord-note {
 		padding-top: 100%;
 		cursor: pointer;
+
+		&:hover {
+			transform: translateY(-3px);
+			transition-duration: 0.3s;
+			transition-timing-function: ease-out;
+		}
+
+		span {
+			&:hover {
+				// color: #d8ae00;
+				transition-duration: 0.5s;
+				transform: scale(2);
+				text-shadow: 0px 4px 8px #88888888;
+				transition-timing-function: ease-in-out;
+			}
+		}
 	}
 
 	.long-note {
