--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
 }
 
 .App-header {
-	background-color: #282c34;
+	background-color: #5f78a0;
 	min-height: 20vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	font-size: calc(10px + 2vmin);
-	color: white;
+	color: #16181d;
 }
 
 .App-link {
