--- a/src/components/chord-box/chord-box.styles.scss
+++ b/src/components/chord-box/chord-box.styles.scss
@@ -15,7 +15,7 @@ p {
 			// color: #d8ae00;
 			transition-duration: 0.5s;
 			transform: scale(2);
-			text-shadow: 0px 4px 8px #88888888;
+			text-shadow: 0px 4px 12px #5f78a0;
 			transition-timing-function: ease-in-out;
 		}
 	}
@@ -46,6 +46,13 @@ p {
 	border: 1px solid #ffffff80;
 	overflow: hidden;
 	position: relative;
+	&:hover {
+		// color: #d8ae00;
+		transition-duration: 0.5s;
+		// transform: scale(2);
+		background-color: #5f78a0;
+		transition-timing-function: ease-in-out;
+	}
 
 	// .half-line {
 	// 	// border-top: 1px solid #ffffff80;
@@ -92,10 +99,24 @@ p {
 
 	&:nth-child(n + 9):nth-child(-n + 16) {
 		background-color: #282c34;
+		&:hover {
+			// color: #d8ae00;
+			transition-duration: 0.5s;
+			// transform: scale(2);
+			background-color: #5f78a0;
+			transition-timing-function: ease-in-out;
+		}
 	}
 
 	&:nth-child(n + 25):nth-child(-n + 32) {
 		background-color: #282c34;
+		&:hover {
+			// color: #d8ae00;
+			transition-duration: 0.5s;
+			// transform: scale(2);
+			background-color: #5f78a0;
+			transition-timing-function: ease-in-out;
+		}
 	}
 
 	.chord-note {
@@ -113,7 +134,7 @@ p {
 				// color: #d8ae00;
 				transition-duration: 0.5s;
 				transform: scale(2);
-				text-shadow: 0px 4px 8px #88888888;
+				text-shadow: 0px 4px 12px #5f78a0;
 				transition-timing-function: ease-in-out;
 			}
 		}
@@ -145,6 +166,13 @@ p {
 	border: 1px solid #ffffff80;
 	overflow: hidden;
 	position: relative;
+	&:hover {
+		// color: #d8ae00;
+		transition-duration: 0.5s;
+		// transform: scale(2);
+		background-color: #5f78a0;
+		transition-timing-function: ease-in-out;
+	}
 
 	.long-note {
 		font-size: 0.65rem;
@@ -272,10 +300,24 @@ p {
 
 	&:nth-child(n + 9):nth-child(-n + 16) {
 		background-color: #282c34;
+		&:hover {
+			// color: #d8ae00;
+			transition-duration: 0.5s;
+			// transform: scale(2);
+			background-color: #5f78a0;
+			transition-timing-function: ease-in-out;
+		}
 	}
 
 	&:nth-child(n + 25):nth-child(-n + 32) {
 		background-color: #282c34;
+		&:hover {
+			// color: #d8ae00;
+			transition-duration: 0.5s;
+			// transform: scale(2);
+			background-color: #5f78a0;
+			transition-timing-function: ease-in-out;
+		}
 	}
 }
 @media only screen and (max-width: 680px) {
