--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
 	text-align: center;
+	background-color: #16181d;
 }
 
 .App-header {
@@ -11,6 +12,17 @@
 	justify-content: center;
 	font-size: calc(10px + 2vmin);
 	color: #16181d;
+	border-bottom-left-radius: 20%;
+	border-bottom-right-radius: 20%;
+}
+
+h1 {
+	margin: .5em;
+	margin-bottom: 0em;
+}
+
+#header-tagline {
+	margin-bottom: 1.8em;
 }
 
 .App-link {
@@ -36,5 +48,51 @@
 @media only screen and (max-width: 680px) {
 	.App-header {
 		min-width: 100vw;
+	}
+}
+
+.App-logo {
+	width: 15vw;
+	/* padding: .2vw; */
+	padding-top: 3vw;
+	margin-bottom: 0;
+	/* transform: rotate(20deg); */
+}
+
+@media only screen and (max-width: 680px) {
+	.App-logo {
+		width: 25vw;
+		padding-top: 5vw;
+		/* transform: rotate(20deg); */
+	}
+}
+
+.swing {
+	animation: swing ease-in-out 0.7s infinite alternate;
+	transform-origin: bottom center;
+	/* float: left; */
+	/* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
+}
+
+.swing:after {
+	content: '';
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	/* border: 1px solid #999; */
+	top: -10px;
+	left: 50%;
+	z-index: 0;
+	border-bottom: none;
+	border-right: none;
+	transform: rotate(45deg);
+}
+
+@keyframes swing {
+	0% {
+		transform: rotate(4deg);
+	}
+	100% {
+		transform: rotate(-4deg);
 	}
 }
