--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -9,6 +9,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
 	// margin-top: -10vw;
 	// margin-left: -22vw;
 }
@@ -50,6 +51,7 @@
 	// margin-left: -2px;
 	z-index: 9999999;
 	border-left: 2px solid #16181d;
+	border-radius: 20%;
 }
 
 .chord-chart-heading {
