Add 1% border radius to chord diagram box

--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -108,6 +108,7 @@
 		flex-direction: row;
 		justify-content: space-between;
 		animation: fadeIn ease-in-out 0.5s;
+		border-radius: 1%;
 
 		.fret-box {
 			width: inherit;
