--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -19,11 +19,11 @@
 
 	@-webkit-keyframes fadeIn {
 		0% {
-			opacity: 0;
+			-webkit-opacity: 0;
 		}
 
 		100% {
-			opacity: 100%;
+			-webkit-opacity: 100%;
 		}
 	}
 	@keyframes fadeIn {
@@ -158,15 +158,15 @@
 			}
 			@-webkit-keyframes moveX {
 				0% {
-					opacity: 0;
-					transform: translatex(-400px);
+					-webkit-opacity: 0;
+					-webkit-transform: translatex(-400px);
 				}
 				20% {
-					opacity: 0%;
+					-webkit-opacity: 0%;
 				}
 				100% {
-					opacity: 100%;
-					transform: translatex(0px);
+					-webkit-opacity: 100%;
+					-webkit-transform: translatex(0px);
 				}
 			}
 			@keyframes moveX {
@@ -214,15 +214,15 @@
 		}
 		@-webkit-keyframes moveY {
 			0% {
-				opacity: 0;
-				transform: translatey(-400px);
+				-webkit-opacity: 0;
+				-webkit-transform: translatey(-400px);
 			}
 			20% {
-				opacity: 0%;
+				-webkit-opacity: 0%;
 			}
 			100% {
-				opacity: 100%;
-				transform: translatey(0px);
+				-webkit-opacity: 100%;
+				-webkit-transform: translatey(0px);
 			}
 		}
 
@@ -271,23 +271,21 @@
 				visibility: visible;
 				-webkit-animation: popDot ease-in-out 0.8s !important;
 				animation: popDot ease-in-out 0.8s !important;
-				-webkit-animation-name: popDot;
-				animation-name: popDot;
 			}
 			@-webkit-keyframes popDot {
 				0% {
-					opacity: 0;
-					transform: scale(0);
+					-webkit-opacity: 0;
+					-webkit-transform: scale(0);
 				}
 				85% {
-					opacity: 0;
+					-webkit-opacity: 0;
 				}
 				90% {
-					transform: scale(1.2);
+					-webkit-transform: scale(1.2);
 				}
 				100% {
-					opacity: 100%;
-					transform: scale(1);
+					-webkit-opacity: 100%;
+					-webkit-transform: scale(1);
 				}
 			}
 
