--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -44,14 +44,14 @@
 	.fret-title {
 		margin-top: 30.5%;
 		margin-left: -13.4%;
-		-webkit-animation: popDot ease-in-out .3s !important;
-		animation: popDot ease-in-out .3s !important;
+		-webkit-animation: popDot ease-in-out 0.3s !important;
+		animation: popDot ease-in-out 0.3s !important;
 	}
 	.first-fret-number {
 		margin-top: 37%;
 		margin-left: -10.3%;
-		-webkit-animation: popDot ease-in-out .4s !important;
-		animation: popDot ease-in-out .4s !important;
+		-webkit-animation: popDot ease-in-out 0.4s !important;
+		animation: popDot ease-in-out 0.4s !important;
 	}
 
 	.chord-name {
