Add seconds units to all animations in chord diagram styles

--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -145,8 +145,8 @@
 				transform-origin: bottom center;
 			}
 			#fret-2 {
-				-webkit-animation: moveX ease-in-out 0.35 !important;
-				animation: moveX ease-in-out 0.35 !important;
+				-webkit-animation: moveX ease-in-out 0.35s !important;
+				animation: moveX ease-in-out 0.35s !important;
 			}
 			#fret-3 {
 				-webkit-animation: moveX ease-in-out 0.5s !important;
