Update blue colour, thicken logo lines, add favicon

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .App-header {
-	background-color: #5f78a0;
+	background-color: #89afe5;
 	min-height: 20vh;
 	display: flex;
 	flex-direction: column;
