Update blue colour on chord diagram and chord box

--- a/src/components/chord-diagram/chord-diagram.styles.scss
+++ b/src/components/chord-diagram/chord-diagram.styles.scss
@@ -10,7 +10,7 @@
 	// border: 2px solid #888888b9;
 	// border-radius: 2%;
 	// background-color: ;
-	box-shadow: 1px 1px 30px 3px #5f78a0;
+	box-shadow: 1px 1px 30px 3px #89afe5;
 	-webkit-animation: fadeIn ease-in-out 0.8s;
 	animation: fadeIn ease-in-out 0.8s;
 	border-radius: 20%;
