--- a/src/components/chord-box/chord-box.styles.scss
+++ b/src/components/chord-box/chord-box.styles.scss
@@ -15,7 +15,7 @@ p {
 			// color: #d8ae00;
 			transition-duration: 0.5s;
 			transform: scale(2);
-			text-shadow: 0px 4px 12px #5f78a0;
+			text-shadow: 0px 4px 12px #89afe5;
 			transition-timing-function: ease-in-out;
 		}
 	}
@@ -50,7 +50,7 @@ p {
 		// color: #d8ae00;
 		transition-duration: 0.5s;
 		// transform: scale(2);
-		background-color: #5f78a0;
+		background-color: #89afe5;
 		transition-timing-function: ease-in-out;
 	}
 
@@ -103,7 +103,7 @@ p {
 			// color: #d8ae00;
 			transition-duration: 0.5s;
 			// transform: scale(2);
-			background-color: #5f78a0;
+			background-color: #89afe5;
 			transition-timing-function: ease-in-out;
 		}
 	}
@@ -114,7 +114,7 @@ p {
 			// color: #d8ae00;
 			transition-duration: 0.5s;
 			// transform: scale(2);
-			background-color: #5f78a0;
+			background-color: #89afe5;
 			transition-timing-function: ease-in-out;
 		}
 	}
@@ -134,7 +134,7 @@ p {
 				// color: #d8ae00;
 				transition-duration: 0.5s;
 				transform: scale(2);
-				text-shadow: 0px 4px 12px #5f78a0;
+				text-shadow: 0px 4px 12px #89afe5;
 				transition-timing-function: ease-in-out;
 			}
 		}
@@ -170,7 +170,7 @@ p {
 		// color: #d8ae00;
 		transition-duration: 0.5s;
 		// transform: scale(2);
-		background-color: #5f78a0;
+		background-color: #89afe5;
 		transition-timing-function: ease-in-out;
 	}
 
@@ -304,7 +304,7 @@ p {
 			// color: #d8ae00;
 			transition-duration: 0.5s;
 			// transform: scale(2);
-			background-color: #5f78a0;
+			background-color: #89afe5;
 			transition-timing-function: ease-in-out;
 		}
 	}
@@ -315,7 +315,7 @@ p {
 			// color: #d8ae00;
 			transition-duration: 0.5s;
 			// transform: scale(2);
-			background-color: #5f78a0;
+			background-color: #89afe5;
 			transition-timing-function: ease-in-out;
 		}
 	}
