--- a/src/components/chord-chart/chord-chart.styles.scss
+++ b/src/components/chord-chart/chord-chart.styles.scss
@@ -58,7 +58,8 @@
 	display: block;
 	padding-top: 1rem;
 	padding-bottom: 2rem;
-	font-size: 1.5rem;
+	font-size: 2rem;
+	text-align: left;
 }
 
 @media only screen and (max-width: 680px) {
@@ -70,7 +71,79 @@
 	}
 
 	.chord-chart-single {
-		max-width: 96vw;
+		max-width: 90vw;
 		padding: 10vw 2vw;
 	}
+}
+
+.song-info-wrapper {
+	width: 100%;
+	height: 33%;
+	display: flex;
+	flex-direction: row;
+	align-content: flex-start;
+	justify-content: space-between;
+	// padding-bottom: 2vw;
+}
+.player-wrapper {
+	// margin-bottom: 2vw;
+	// margin-right: 2vw;
+	// position: relativse;
+	display: flex;
+	flex-direction: row;
+	height: 100%;
+
+	max-width: 70%;
+	// width: 33%;
+	// margin-right: 4vw;
+	// max-width: 50px;
+
+	// padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
+}
+
+.react-player {
+	border: 1px solid #89afe5;
+	// width: 20%;
+	box-shadow: 1px 1px 8px 0px #89afe5a6;
+	margin-bottom: 4vw;
+	// height: 30%;
+	// background-color: #89afe5;
+	// position: absolute;
+	// top: 0;
+	// left: 0;
+}
+.react-player__play-icon {
+	// box-shadow: 1px 1px 30px 3px #89afe5;
+	// margin-left: -30px;
+}
+
+.react-player__preview {
+	// padding-top: 50%;
+	// padding-bottom: 50%;
+}
+
+.song-info {
+	padding-top: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	text-align: left;
+	margin-bottom: 4vw;
+	// justify-content: space-between;
+	// width: 100%;
+	// margin-right: 5vw;
+}
+
+.song-info p {
+	font-size: 1rem;
+}
+
+#info-1 {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+#info-3 {
+	margin-top: 0;
+	margin-bottom: 0;
 }
